--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="#destacados">Destacados</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -129,7 +129,7 @@
     <section id="destacados" class="container text-center my-3 py-3">
         <h3>Destacados</h3>
         <hr>
-        <div class="card-deck">
+        <div class="card-deck py-3 my-3">
             <div class="card bg-cyan">
               <img src="assets/img/card1.jpg" class="card-img-top w-100" alt="...">
               <div class="card-body">
@@ -164,6 +164,12 @@
               </div>
           </div>
     </section>
+    <!--Contacto-->
+    <section class="container text-center" id="contact">
+        <h3>Contacto</h3>
+        <hr>
+        <br>
+        <div class="typeform-widget" data-url="https://form.typeform.com/to/jFWRv8CR?typeform-medium=embed-snippet" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 
     <!-- jQuery & Bootstrap -->
