--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap 4.6 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- Css -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <!--Fontawesome 4-->
+    <!--Fontawesome 4.7 -->
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-    <!-- Pestana -->
+    <!-- Info pestaña -->
     <link rel="icon" href="assets/img/viajes.svg">
     <title>Viajes Chile</title>
     
   </head>
   <body>
       <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark  fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark  fixed-top" id="navbar">
         <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="icon" height="28px"> Viajes Chile</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#home">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Quienes Somos</a>
+              <a class="nav-link d-none d-md-block" href="#about">Quienes Somos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#destacados">Destacados</a>
@@ -164,15 +164,33 @@
               </div>
           </div>
     </section>
+
     <!--Contacto-->
     <section class="container text-center" id="contact">
         <h3>Contacto</h3>
         <hr>
         <br>
-        <div class="typeform-widget" data-url="https://form.typeform.com/to/jFWRv8CR?typeform-medium=embed-snippet" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <div class="typeform-widget" data-url="https://form.typeform.com/to/knXXl3ZG?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+    </section>
 
+    <!-- Footer -->
+    <footer class="container-fluid bg-cyan py-1 mt-5">
+      <div class="container">
+        <div class="row col-12 mx-0">
+          <div class="col-12 col-md-6 text-center mx-auto my-auto">
+              <h4>VIAJES CHILE</h4>
+          </div>
+          <div class="col-12 col-md-6 mr-auto text-center py-3">
+            <i class="fa fa-github-square fa-3x mr-1" aria-hidden="true" href="https://github.com/MattPoblete"></i>
+            <i class="fa fa-facebook-square fa-3x mx-1" aria-hidden="true"></i>
+            <i class="fa fa-twitter-square fa-3x mx-1" aria-hidden="true"></i>
+            <i class="fa fa-instagram fa-3x ml-1" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-    <!-- jQuery & Bootstrap -->
+    <!-- jQuery 3.6 & Bootstrap 4.6 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
