--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end mr-2" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="#home">Inicio <span class="sr-only">(current)</span></a>
@@ -42,9 +42,14 @@
           </ul>
         </div>
       </nav>
-      <!-- Hero section -->
+      <!-- Carrusel -->
     <header class="container-fluid px-0" id="home">
         <div id="carouselheader" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="assets/img/carousel1.jpg" class="d-block w-100 img-fluid" alt="Alpacas">
@@ -75,7 +80,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="bg-cyan">
-                        <i class="fa fa-plane " style="font-size: 32px;" aria-hidden="true"></i>
+                        <i class="fa fa-plane " style="font-size: 32px;" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Texto de prueba 1"></i>
                     </div>
                     <br>
                     <div class="text-justify">
@@ -101,13 +106,13 @@
                         </p>
                         <br>
                         <div class="bg-cyan text-center">
-                            <i class="fa fa-flag" style="font-size: 32px;" aria-hidden="true"></i>
+                            <i class="fa fa-flag" style="font-size: 32px;" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Texto de prueba 2"></i>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="bg-cyan">
-                        <i class="fa fa-map " style="font-size: 31px;" aria-hidden="true"></i>
+                        <i class="fa fa-map " style="font-size: 31px;" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Texto de prueba 3"></i>
                     </div>
                     <br>
                     <div class="text-justify">
@@ -230,14 +235,14 @@
     <footer class="container-fluid bg-cyan py-1 mt-5">
       <div class="container">
         <div class="row col-12 mx-0">
-          <div class="col-12 col-md-6 text-center mx-auto my-auto">
-              <h4>VIAJES CHILE</h4>
+          <div class="col-12 col-md-6 text-center mx-auto my-auto" id="footerName">
+              <a href="#home"><h4>VIAJES CHILE</h4></a>
           </div>
           <div class="col-12 col-md-6 mr-auto text-center py-3">
-            <i class="fa fa-github-square fa-3x mr-1" aria-hidden="true" href="https://github.com/MattPoblete"></i>
-            <i class="fa fa-facebook-square fa-3x mx-1" aria-hidden="true"></i>
-            <i class="fa fa-twitter-square fa-3x mx-1" aria-hidden="true"></i>
-            <i class="fa fa-instagram fa-3x ml-1" aria-hidden="true"></i>
+            <a class="fa fa-github-square fa-3x mr-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
+            <a class="fa fa-facebook-square fa-3x mx-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
+            <a class="fa fa-twitter-square fa-3x mx-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
+            <a class="fa fa-instagram fa-3x ml-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
           </div>
         </div>
       </div>
