--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
       <div class="container">
         <div class="row col-12 mx-0">
           <div class="col-12 col-md-6 text-center mx-auto my-auto" id="footerName">
-              <a href="#home"><h4>VIAJES CHILE</h4></a>
+              <a class="footerAnchor" href="#home"><h4>VIAJES CHILE</h4></a>
           </div>
           <div class="col-12 col-md-6 mr-auto text-center py-3">
-            <a class="fa fa-github-square fa-3x mr-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
-            <a class="fa fa-facebook-square fa-3x mx-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
-            <a class="fa fa-twitter-square fa-3x mx-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
-            <a class="fa fa-instagram fa-3x ml-1" aria-hidden="true" href="https://github.com/MattPoblete"></a>
+            <a class="fa fa-github-square fa-3x mr-1 footerAnchor" aria-hidden="true" href="https://github.com/MattPoblete"></a>
+            <a class="fa fa-facebook-square fa-3x mx-1 footerAnchor" aria-hidden="true" href="https://github.com/MattPoblete"></a>
+            <a class="fa fa-twitter-square fa-3x mx-1 footerAnchor" aria-hidden="true" href="https://github.com/MattPoblete"></a>
+            <a class="fa fa-instagram fa-3x ml-1 footerAnchor" aria-hidden="true" href="https://github.com/MattPoblete"></a>
           </div>
         </div>
       </div>
