--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
             </a>
           </div>
     </header>
+    <!--Barra navbar-->
+    <section class="container-fluid sticky-top navbarBg">
+    </section>
     <!--Quienes Somos-->
-    <section class="container text-center my-3 py-3 d-none d-md-block" id="about">
+    <section class="container text-center my-3 pb-3 d-none d-md-block" id="about">
         <h3> ¿Quiénes somos?</h3>
         <hr>
         <br>
